Bug 364092, Related node on DOMAttrModifed listener isn't the same as attr node removed by RemoveAttributeNode, r+sr=sicking